src/components/auth/create_password/css/styles.module.css
.container {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.wrapper {
    width: var(--max-width);
    margin: 10px auto;
    display: flex;
    justify-content: center;
    align-items: center;
}
.form_styles {
    width: min(500px, 100%);
    height: auto;
    border-radius: 10px;
    padding: clamp(1rem, 10dvw, 3rem);
    overflow: hidden;
    opacity: 0;
    transform: translateY(50px);
    animation: fade_in 500ms forwards ease;
}
@keyframes fade_in {
    0% {
        opacity: 0;
        transform: translateY(30px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

.form_styles input {
    width: 100%;
    height: auto;
    margin: 1rem 0;
    font-size: clamp(1rem, 0.5rem + 1vw, 1.1rem);
    padding: 15px 30px;
    background: transparent;
    border: transparent;
    border: 2px solid var(--primary);
    outline: none;
    color: var(--foreground);
    border-radius: 30px;
}
.form_styles p {
    margin: 1rem 0 0 0;
    font-size: clamp(0.8rem, 0.5rem + 1vw, 1rem);
}
.form_styles a {
    color: var(--default-color-blue);
}
.form_styles select {
    background: var(--primary);
    cursor: pointer;
    padding: 0.5rem;
    margin: 0.3rem 0.5rem;
    outline: none;
    border: transparent;
}
.info {
    flex-flow: column;
    align-items: flex-start;
    display: flex;
}
.info h1 {
    font-size: clamp(1.3rem, 0.5rem + 1vw, 2rem);
    margin: 1rem 0 0 0;
}
.logo {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}
.logo figcaption {
    font-size: clamp(1.5rem, 0.5rem + 1vw, 3rem);
    font-weight: 900;
    opacity: 0.5;
    margin: 0 0 0 0.5rem;
}
.buttons {
    padding: 2rem 0 0 0;
    width: 100%;
    display: flex;
    justify-content: right;
}
.buttons button {
    width: 50%;
    padding: 15px;
    background: var(--primary);
    border-radius: 30px;
    border: transparent;
    font-size: 1rem;
    cursor: pointer;
    margin: 0 1rem;
}
.buttons button:active {
    opacity: 0.3;
}
.checkbox {
    display: flex;
    width: 100%;
    height: 60px;
    padding: 0;
    margin: 0 auto;
}
.checkbox p {
    margin: 15px 0 0 5px;
}
.checkbox input {
    width: 20px;
    height: 20px;
    cursor: pointer;
    margin: 15px 0;
}

